--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Testing this stuff",
   "main": "index.js",
   "scripts": {
+    "start": "parcel",
+    "build": "parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "parcel": "latest"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "buffer": "^6.0.3",
-    "parcel": "^2.12.0"
-  },
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "three": "^0.164.1"
   }
 }
